--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,21 @@ android {
 }
 
 dependencies {
-
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
+    implementation 'com.google.android.material:material:1.6.0'
+    //Additional dependencies Androidx:
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.1.0'
+    //Additional dependencies AndroidX:
+    implementation 'androidx.activity:activity-ktx:1.4.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
+    //Reference:https://github.com/square/retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     testImplementation 'junit:junit:4.13.2'
+    //noinspection GradleCompatible
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
